# dawg

./: .gitignore  flake.nix  main.py  plan.md  pyproject.toml
src/dawg/: cli.py  daemon.py
src/dawg/audio/: __init__.py  capture.py  stt.py  vad.py
src/dawg/brain/: __init__.py  agent.py
src/dawg/config/: models.py  system_prompt.md
src/dawg/state/: models.py
src/dawg/tools/: __init__.py  shell.py
