[project]
name = "dawg"
version = "0.1.0"
description = "A minimal pyproject.toml"
authors = [ ]
requires-python = ">=3.13"
dependencies = [
"silero-vad",
"pyaudio",
"numpy",
"typer",
]

[project.scripts]
dawg = "dawg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
