[project]
name = "dawg"
version = "0.1.0"
description = "A minimal pyproject.toml"
authors = [ ]
requires-python = ">=3.13"
dependencies = [
    "silero-vad",
    "pyaudio",
    "numpy",
    "typer",
    "faster-whisper>=1.2.1",
    "requests>=2.33.1",
]

[project.scripts]
dawg = "dawg.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
